// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container allows additional classes to be passed through 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container allows padding to be passed through 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0 0.4rem;
}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container has a container class by default and NO fixed class 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Container renders children 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="child-content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Container renders correctly without props 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin: auto;
  padding: 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;
